[package]
name = "your_project_name"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "ownership"
path = "src/main.rs"

[[bin]]
name = "ownership2"
path = "src/literals_operators_in_rust.rs"

[[bin]]
name = "ownership3"
path = "src/celsius to farenheit.rs"

[[bin]]
name = "ownership4"
path = "src/chrmsg.rs"

[[bin]]
name = "ownership5"
path = "src/fibonauci.rs"

[[bin]]
name = "ownership6"
path = "src/area_of_triangle.rs"